Minor typo fixes

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-60_team.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-60_team.htm
@@ -17,8 +17,9 @@
 
 <P>We will learn how to work on our project, then commit changes to the repository 
   for others on the team to use. As we continue to work on the project alongside 
-  other users we will see how to Commit resources that other users may be simultaneously 
-  working on, and how to results those changes in the project. </P>
+  other users we will see how to commit resources that other users may be simultaneously 
+  working on, and how to update our workspace with changes others make in the 
+  project. </P>
 
 
 <P>Remember, before we get started you need to entice at least one coworker into
