--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61e_whatisloc.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61e_whatisloc.htm
@@ -14,12 +14,12 @@ is a repository location</h3>
 
   <p CLASS="Para">We have just added a new repository location to the CVS Repositories 
     view. This is probably a good time to ask ourselves what a repository location 
-    is or more importantly what it isn't.</p>
-  <p CLASS="Para">A repository location is not an actual live connection, instead 
-    it is a description of where the repository is located. At a later time when 
+    is or, more importantly, what it isn't.</p>
+  <p CLASS="Para">A repository location is not an actual live connection. Instead 
+    it is a description of where the repository is located. At a later time, when 
     we are committing work to the repository or updating with work done by others, 
     the Workbench will create a connection based on this location information.&nbsp; 
-    Connections will be opened and close as required when performing CVS team 
+    Connections will be opened and closed as required when performing CVS team 
     operations, and those connections will be based on the information you provided 
     in the repository location. </p>
   <p CLASS="Para">Suppose we disconnected from the network and went home, the 
