--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-107b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-107b.htm
@@ -59,7 +59,7 @@ they are expensive to compute so they are calculated in the background.
   <li>Decorations can be removed by deleting the decoration variable name (i.e.<i> 
     {added_flag}</i>) from the decoration string. In a similar manner, spacing 
     can be added.</li>
-  <li>To configure icon decorations, simply enbable/disable the icon checkboxes 
+  <li>To configure icon decorations, simply enable/disable the icon checkboxes 
     at the bottom of the page.</li>
   <li>Click <b>OK</b> or <b>Apply</b> for the new decorations to take effect.</li>
 </ol>
