--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-115.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-115.htm
@@ -1,1 +1,69 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Synchronizing with the repository</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1>Synchronizing with the repository</H1><p>To synchronize resources in the Workbench those in the repository:</p><ol>  <li>In the Navigator view, select the resources that you want to synchronize.</li>  <li>Right-click and select <b>Team &gt; Synchronize with Repository</b>. The     Synchronize view opens.</li>  <li>Use the toolbar buttons to switch modes for this view. There are three:     <ul>      <li>Incoming mode - shows incoming changes only (resources in the repository         that differ from what is in the Workbench).</li>      <li>Outgoing mode - shows outgoing changes only (resources modified in the         Workbench).</li>      <li>Incoming/Outgoing mode - shows both incoming and outgoing changes.</li>    </ul>    <p><em>Important:</em> It is preferable to update resources in the Workbench       first, resolve any conflicts that exist by merging, then commit Workbench       resources to the repository.</li>  <li>It is possible that someone has committed a new revision of your file since     you started working on it. This will result in a <em>conflict</em>, and care     must be taken to resolve this. To see just conflicts, click the <b> Show Only     Conflicts</b> button on the view's toolbar.</li></ol><p>The resources displayed in the Structure Compare area will depend on which mode is used in the Synchronize view. In the Text Compare area, the Workbench resource is on the left side, and the repository resource is on the right side.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-27b.htm">Branches</a><br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br><a href="../concepts/concepts-29.htm">Three-way comparisons</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-114.htm">Committing</a><br><a href="tasks-113.htm">Updating</a><br><a href="tasks-113b.htm">Resolving conflicts</a><br><a href="tasks-68.htm">Comparing resources</a><br><a href="tasks-68dg.htm">Merging changes in the Compare editor</a><br><a href="tasks-100b.htm">Merging from a branch</a><br><a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a><br><a href="tasks-103.htm">Replacing resources in the Workbench</a><br></p><p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27"><br><a href="../reference/ref-47.htm">CVS</a><br><a href="../reference/ref-33.htm">CVS Synchronize view</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Synchronizing with the repository</title>
+<meta name="keyword" content="team">
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Synchronizing with the repository</H1>
+
+<p>To synchronize resources in the Workbench with those in the repository: </p>
+
+<ol>
+  <li>In the Navigator view, select the resources that you want to synchronize.</li>
+  <li>Right-click and select <b>Team &gt; Synchronize with Repository</b>. The 
+    Synchronize view opens.</li>
+  <li>Use the toolbar buttons to switch modes for this view. There are three: 
+    <ul>
+      <li>Incoming mode - shows incoming changes only (resources in the repository 
+        that differ from what is in the Workbench).</li>
+      <li>Outgoing mode - shows outgoing changes only (resources modified in the 
+        Workbench).</li>
+      <li>Incoming/Outgoing mode - shows both incoming and outgoing changes.</li>
+    </ul>
+    <p><em>Important:</em> It is preferable to update resources in the Workbench 
+      first, resolve any conflicts that exist by merging, then commit Workbench 
+      resources to the repository.</li>
+  <li>It is possible that someone has committed a new revision of your file since 
+    you started working on it. This will result in a <em>conflict</em>, and care 
+    must be taken to resolve this. To see just conflicts, click the <b> Show Only 
+    Conflicts</b> button on the view's toolbar.</li>
+</ol>
+
+<p>The resources displayed in the Structure Compare area will depend 
+on which mode is used in the Synchronize view. In the Text Compare area, the 
+Workbench resource is on the left side, and the repository resource is on the 
+right side.</p>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+<a href="../concepts/concepts-27b.htm">Branches</a><br>
+<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br>
+<a href="../concepts/concepts-29.htm">Three-way comparisons</a></p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-114.htm">Committing</a><br>
+<a href="tasks-113.htm">Updating</a><br>
+<a href="tasks-113b.htm">Resolving conflicts</a><br>
+<a href="tasks-68.htm">Comparing resources</a><br>
+<a href="tasks-68dg.htm">Merging changes in the Compare editor</a><br>
+<a href="tasks-100b.htm">Merging from a branch</a><br>
+<a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a><br>
+<a href="tasks-103.htm">Replacing resources in the Workbench</a><br>
+</p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-47.htm">CVS</a>
+<br><a href="../reference/ref-33.htm">CVS Synchronize view</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
