--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-10.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-10.htm
@@ -11,10 +11,9 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Disconnecting a project from CVS</H1>
 
-<P>Disconnecting a project from CVS to disable the CVS operations that can be
-performed on the project and it resources and optionally to remove the CVS information 
-(stored in the CVS folders) associated with the project.
-</P>
+<P>Disconnect a project from CVS to disable the CVS operations that can be performed 
+  on the project and it resources and optionally to remove the CVS information 
+  (stored in the CVS folders) associated with the project. </P>
 
 <P>To disconnect a project from CVS:
 </P>
@@ -25,8 +24,9 @@ performed on the project and it resources and optionally to remove the CVS infor
     Disconnect from CVS dialog opens.</li>
   <li>In the dialog, choose one of: 
     <ol type="a">
-      <li><b>Delete the CVS meta information</b> - disables the CVS team menu operations 
-        and removes the CVS folders and thier contents from the file system.</li>
+      <li><b>Delete the CVS meta information</b> - disables the CVS team menu 
+        operations and removes the CVS folders and their contents from the file 
+        system.</li>
       <li><b>Do not delete the CVS meta information</b> - disables the CVS team menu 
         operations but leaves the CVS meta information.</li>
     </ol></li>
