--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d.htm
@@ -1,1 +1,102 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Version control life cycle: adding and ignoring resources</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Version control life cycle: adding and ignoring resources</H1><p>When committing resources, often there are resources that you do not want to   store in the repository. For example, external editors might create temporary   files in your project, compilation of .java files might create .class files,   or some build operations might result in binary files. These generated files,   when taken together, may be quite large. They may also be regenerated whenever   a build is performed, resulting in many outgoing changes. Typically these are   not files that one wants to persist in the repository or to share with other   members of a team.</p><p>Team CVS has two related tasks that allow you to control which files conduct   in the repository: adding a resource to version control, and ignoring a resource.</p>  <h2>Adding a File to Version Control</h2><p>Team CVS does not automatically add files to version control. Rather, it's   up to you the user to explicitly add files to version control. This is accomplished   by selecting the <b>Team &gt; Add to Version Control</b> menu.</p><p>When performed on a file, it will add that file to version control. The result   is that the CVS repository immediately creates an entry for it so that it can   start maintaining history state for that file. This occurs even before you commit   the file to the repository.</p><p>When adding a folder or project, the action will recursively descend into subfolders,   adding those files it finds to version control, provided the files have not   been explicitly ignored.</p><p><em>Tip:</em> When you create a new file in a CVS project, a task is created   to remind you of the fact that that file is neither ignored nor under version   control. The &quot;Quick Fix&quot; menu for the task will provide options for   resolving it, such as either adding it to version control or adding it to the   list of ignored resources.</p><p><em>Tip:</em> When committing files from the Synchronization view, if the selection   either directly or recursively contains files which have not been added to version   control, you'll be prompted whether or not at that time you want them added.   This is a convenience function to help ensure that you do not miss committing   new resources which were unintentionally never added.</p><h2><i>How May I Ignore Thee, Let me Count the Ways</i></h2><P>There are several facilities that allow you to specify which resources should   be excluded from version control:</P><ol>  <li>There is a global preference which you can use for ignoring files and directories     that match a certain filename pattern. For example, if you create a global     ignore for <samp>/bin</samp>, and any resource that matches &quot;bin&quot;     in any directory in the workspace will be ignored for version control. This     preference can be found in <b>Window &gt; Preferences &gt; Team &gt; Ignored Resources</b>.</li>  <li>Any resource marked as <i>derived</i> will be automatically ignored for     version management by Team CVS. Some builders, such as the Java builder, mark     all of its build output (e.g. .class files) as derived.</li>  <li>CVS supports the creation of a special <i>.cvsignore</i> file whose contents     describe which files to ignore for version management. This is used most often to ignore directories.     The .cvsignore file only applies the pattern to resources in the <i> same</i>     directory as the .cvsignore file itself.</li></ol><P><em>Tip</em>: Once a resource is under version control, it cannot easily be   subsequently ignored. This is why adding to version control is an explicit operation   performed by you the user.</P><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-100d1.htm">Creating a global ignore pattern</a><br><a href="tasks-100d2.htm">Authoring the CVS .cvsignore file</a><br><a href="tasks-114.htm">Committing</a><br><a href="tasks-113.htm">Updating</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Version control life cycle: adding and ignoring resources</title>
+<meta name="keyword" content="team">
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1 CLASS="Head">Version control life cycle: adding and ignoring resources</H1>
+
+<p>When committing resources, often there are resources that you do not want to 
+  store in the repository. For example, external editors might create temporary 
+  files in your project, compilation of .java files might create .class files, 
+  or some build operations might result in binary files. These generated files, 
+  when taken together, may be quite large. They may also be regenerated whenever 
+  a build is performed, resulting in many outgoing changes. Typically these are 
+  not files that one wants to persist in the repository or to share with other 
+  members of a team.
+</p>
+
+<p>Team CVS has two related tasks that allow you to control which files are stored 
+  in the repository: adding a resource to version control, and ignoring a resource. 
+</p>
+  
+<h2>Adding a File to Version Control</h2>
+
+<p>Team CVS does not automatically add files to version control. Rather, it's 
+  up to you the user to explicitly add files to version control. This is accomplished 
+  by selecting the <b>Team &gt; Add to Version Control</b> menu.
+</p>
+
+<p>When performed on a file, it will add that file to version control. The result 
+  is that the CVS repository immediately creates an entry for it so that it can 
+  start maintaining history state for that file. This occurs even before you commit 
+  the file to the repository.
+</p>
+
+<p>When adding a folder or project, the action will recursively descend into subfolders, 
+  adding those files it finds to version control, provided the files have not 
+  been explicitly ignored.
+</p>
+
+<p><em>Tip:</em> When you create a new file in a CVS project, a task is created 
+  to remind you of the fact that that file is neither ignored nor under version 
+  control. The &quot;Quick Fix&quot; menu for the task will provide options for 
+  resolving it, such as either adding it to version control or adding it to the 
+  list of ignored resources.
+</p>
+
+<p><em>Tip:</em> When committing files from the Synchronization view, if the selection 
+  either directly or recursively contains files which have not been added to version 
+  control, you'll be prompted whether or not at that time you want them added. 
+  This is a convenience function to help ensure that you do not miss committing 
+  new resources which were unintentionally never added.
+</p>
+
+<h2><i>How May I Ignore Thee, Let me Count the Ways</i></h2>
+
+<P>There are several facilities that allow you to specify which resources should 
+  be excluded from version control:
+</P>
+
+<ol>
+  <li>There is a global preference which you can use for ignoring files and directories 
+    that match a certain filename pattern. For example, if you create a global 
+    ignore for <samp>/bin</samp>, and any resource that matches &quot;bin&quot; 
+    in any directory in the workspace will be ignored for version control. This 
+    preference can be found in <b>Window &gt; Preferences &gt; Team &gt; Ignored Resources</b>.</li>
+  <li>Any resource marked as <i>derived</i> will be automatically ignored for 
+    version management by Team CVS. Some builders, such as the Java builder, mark 
+    all of its build output (e.g. .class files) as derived.</li>
+  <li>CVS supports the creation of a special <i>.cvsignore</i> file whose contents 
+    describe which files to ignore for version management. This is used most often to ignore directories. 
+    The .cvsignore file only applies the pattern to resources in the <i> same</i> 
+    directory as the .cvsignore file itself.</li>
+</ol>
+
+<P><em>Tip</em>: Once a resource is under version control, it cannot easily be 
+  subsequently ignored. This is why adding to version control is an explicit operation 
+  performed by you the user.
+</P>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-100d1.htm">Creating a global ignore pattern</a><br>
+<a href="tasks-100d2.htm">Authoring the CVS .cvsignore file</a><br>
+<a href="tasks-114.htm">Committing</a><br>
+<a href="tasks-113.htm">Updating</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
