--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-11.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-11.htm
@@ -1,1 +1,90 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Setting the CVS keyword substitution mode</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Setting the CVS keyword substitution mode</H1><P>CVS uses the keyword substitution mode of a file to differentiate binary files from ASCII files and to indicate what type of keyword substitution is to take place when files are committed and checked out.</P>  <P>To set the CVS keyword substitution mode:</P><ol>  <li>In the Navigator view, select the files or containing folders for which     a change in keyword substitution mode is desired. <b>Note</b>: Ensure that     any new files that are to be committed are added to CVS version control as     the keyword substitution mode can only be set for files that are already under     CVS control.</li>  <li>From the pop-up menu, select<b> Team &gt; Change ASCII/Binary Property</b>     The Set Keyword Substitution Mode wizard will open.</li>  <li>On the first page of the wizard, select the mode to be applied to the selected files:     <ul>      <li><b>Automatic</b> - uses the file type to determine whether selected         resources should use binary or the default ASCII mode (the deafult ASCII         mode is set on the CVS preferences page).</li>      <li><b>Binary</b> - sets all selected file to binary. Files that are binary         are not altered in any way by CVS.</li>      <li><b>ASCII without keyword substitution</b> - sets all the selected files         to ASCII but CVS does not perform any keyword substitution. The line endings         of ASCII files may be altered by CVS.</li>      <li><b>ASCII with keyword substitution</b> - sets all the selected files         to ASCII and CVS will perform the selected type of keyword substitution.</li>    </ul>    <p>Click <b>Next</b> to go to the next page.</p></li>  <li>On the <b>Include versioned files</b> page of the wizard, indicate whether     files already shared in the repsitory are to be effected. If this setting     is disabled, only files that have been added to cvs control but not committed will be effected.     This page will only appear if there are files already shared with the repository.     Click <b>Next</b> to go to the next page.</li>  <li>On the <b>Include files with outgoing changes</b> page of the wizard, indicate     whether files that have outgoing changes are to be effected. This page will     only appear if there are files with outgoing changes. Click <b>Next</b> to     go to the next page.</li>  <li>On the <b>Summary</b> page of the wizard, inspect the proposed keyword substitution     mode settings to ensure they are correct. Click <b>Finish</b> to apply the     changes. </li></ol><p><em>Tip:</em> On the Summary page, the assigned mode for a file can be changed by clicking on the proposed mode in the table and selecting the desired mode from the drop down list that becomes available.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-27b.htm">Branches</a><br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-92.htm">Creating a CVS repository location</a><br><a href="tasks-96.htm">Checking out a project from the CVS repository</a><br><a href="tasks-103.htm">Replacing resources in the Workbench</a><br><a href="tasks-111.htm">Defining a branch tag</a><br><a href="tasks-100a.htm">Branching</a><br><a href="tasks-115.htm">Synchronizing with the repository</a><br><a href="tasks-113.htm">Updating</a><br><a href="tasks-113b.htm">Resolving conflicts</a><br><a href="tasks-100b.htm">Merging from a branch</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br><a href="../reference/ref-47.htm">CVS</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Setting the CVS keyword substitution mode</title>
+<meta name="keyword" content="team">
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1 CLASS="Head">Setting the CVS keyword substitution mode</H1>
+
+<P>CVS uses the keyword substitution mode of a file to differentiate binary files 
+from ASCII files and to indicate what type of keyword substitution is to take 
+place when files are committed and checked out.
+</P>
+  
+<P>To set the CVS keyword substitution mode:
+</P>
+
+<ol>
+  <li>In the Navigator view, select the files or containing folders for which 
+    a change in keyword substitution mode is desired. <b>Note</b>: Ensure that 
+    any new files that are to be committed are added to CVS version control as 
+    the keyword substitution mode can only be set for files that are already under 
+    CVS control.</li>
+  <li>From the pop-up menu, select<b> Team &gt; Change ASCII/Binary Property</b> 
+    The Set Keyword Substitution Mode wizard will open.</li>
+  <li>On the first page of the wizard, select the mode to be applied to the selected files: 
+    <ul>
+      <li><b>Automatic</b> - uses the file type to determine whether selected 
+        resources should use binary or the default ASCII mode (the deafult ASCII 
+        mode is set on the CVS preferences page).</li>
+      <li><b>Binary</b> - sets all selected files to binary. Files that are binary 
+        are not altered in any way by CVS.</li>
+      <li><b>ASCII without keyword substitution</b> - sets all the selected files 
+        to ASCII but CVS does not perform any keyword substitution. The line endings 
+        of ASCII files may be altered by CVS.</li>
+      <li><b>ASCII with keyword substitution</b> - sets all the selected files 
+        to ASCII and CVS will perform the selected type of keyword substitution.</li>
+    </ul>
+    <p>Click <b>Next</b> to go to the next page.</p></li>
+  <li>On the <b>Include versioned files</b> page of the wizard, indicate whether 
+    files already shared in the repository are to be affected. If this setting 
+    is disabled, only files that have been added to cvs control but not committed 
+    will be affected. This page will only appear if there are files already shared 
+    with the repository. Click <b>Next</b> to go to the next page.</li>
+  <li>On the <b>Include files with outgoing changes</b> page of the wizard, indicate 
+    whether files that have outgoing changes are to be affected. This page will 
+    only appear if there are files with outgoing changes. Click <b>Next</b> to 
+    go to the next page.</li>
+  <li>On the <b>Summary</b> page of the wizard, inspect the proposed keyword substitution 
+    mode settings to ensure they are correct. Click <b>Finish</b> to apply the 
+    changes. </li>
+</ol>
+
+<p><em>Tip:</em> On the Summary page, the assigned mode for a file can be changed 
+by clicking on the proposed mode in the table and selecting the desired mode 
+from the drop down list that becomes available.
+</p>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+<a href="../concepts/concepts-27b.htm">Branches</a><br>
+<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-92.htm">Creating a CVS repository location</a><br>
+<a href="tasks-96.htm">Checking out a project from the CVS repository</a><br>
+<a href="tasks-103.htm">Replacing resources in the Workbench</a><br>
+<a href="tasks-111.htm">Defining a branch tag</a><br>
+<a href="tasks-100a.htm">Branching</a><br>
+<a href="tasks-115.htm">Synchronizing with the repository</a><br>
+<a href="tasks-113.htm">Updating</a><br>
+<a href="tasks-113b.htm">Resolving conflicts</a><br>
+<a href="tasks-100b.htm">Merging from a branch</a>
+</p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+<a href="../reference/ref-47.htm">CVS</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
