[TB] changed heading to sentence style capitalisation

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
@@ -9,8 +9,7 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 class="Head">
-Using the Externalize Strings wizard</h1>
+<h1 class="Head"> Using the Externalize Strings Wizard</h1>
 To open the Externalize Strings wizard, do one of the following:
 <ul>
 <li>
