--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-187.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-187.htm
@@ -9,8 +9,7 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 class="Head">
-Finding Next or Previous Match</h1>
+<h1 class="Head"> Finding next or previous match</h1>
 
 <div class="Para">To find the next match:</div>
 
