--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-31.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-31.htm
@@ -12,8 +12,7 @@
 <h1 CLASS="Head">
 Adding source code as individual files</h1>
 
-<h2>
-From a ZIP or JAR File</h2>
+<h2> From a ZIP or JAR file</h2>
 
 <ol>
 <li>
@@ -26,10 +25,10 @@ the imported files will not be on the build path.
 From the workbench menu bar, select <b>File</b> > <b>Import</b>.</li>
 
 <li>
-In the Import wizard, select <b>Zip file</b>, then click&nbsp;<span CLASS="Label"><b>Next</span></b>.</li>
+In the Import wizard, select <b>Zip file</b>, then click&nbsp;<span CLASS="Label"><b>Next</b></span>.</li>
 
 <li>
-In the&nbsp;<span CLASS="Label"><b>Zip file</span></b> field, type or browse
+In the&nbsp;<span CLASS="Label"><b>Zip file</b></span> field, type or browse
 to select the file from which you would like to add the resources.</li>
 
 <div CLASS="Para">In the import selection panes, use the following methods
@@ -42,23 +41,23 @@ the containers in the selected directory. Then in the right pane, select
 or clear boxes for individual files.</li>
 
 <li CLASS="Item">
-Click&nbsp;<span CLASS="Label"><b>Select Types</span></b> to select specific
+Click&nbsp;<span CLASS="Label"><b>Select Types</b></span> to select specific
 file types to add.</li>
 
 <li CLASS="Item">
-Click&nbsp;<span CLASS="Label"><b>Select All</span></b> to select all files
+Click&nbsp;<span CLASS="Label"><b>Select All</b></span> to select all files
 in the directory, then go through and deselect the ones that you don't
 want to add.</li>
 
 <li CLASS="Item">
-Click&nbsp;<span CLASS="Label"><b>Deselect All</span></b> to deselect all
+Click&nbsp;<span CLASS="Label"><b>Deselect All</b></span> to deselect all
 files in the directory, then go through and choose individual files to
 add.</li>
 </ul>
 
 <li>
 In the&nbsp;<span CLASS="Label"><b>Where Do You Want The Imported Resources
-To Go?</span></b> field, type or browse to select a workbench container
+To Go?</b></span> field, type or browse to select a workbench container
 for the added resources (if it was not already selected when you activated
 the&nbsp;<span CLASS="Label">Import</span> command).</li>
 
@@ -67,11 +66,10 @@ In the <b>Options</b> area, you can choose whether or not to overwrite
 existing resources without warning.</li>
 
 <li>
-Click&nbsp;<span CLASS="Label"><b>Finish</span></b> when you are done.</li>
+Click&nbsp;<span CLASS="Label"><b>Finish</b></span> when you are done.</li>
 </ol>
 
-<h2>
-From a Directory</h2>
+<h2> From a directory</h2>
 
 <ol>
 <div CLASS="Para">In the Navigator or Package Explorer, select the source
@@ -82,9 +80,9 @@ the imported files will not be on the build path.
 
 <p CLASS="Para">From the workbench menu bar, select <b>File</b> > <b>Import</b>.
 
-<p CLASS="Para">In the import wizard, select <b>File System</b>, then click&nbsp;<span CLASS="Label"><b>Next</span></b>.
+<p CLASS="Para">In the import wizard, select <b>File System</b>, then click&nbsp;<span CLASS="Label"><b>Next</b></span>.
 
-<p CLASS="Para">In the&nbsp;<span CLASS="Label"><b>Directory</span></b>
+<p CLASS="Para">In the&nbsp;<span CLASS="Label"><b>Directory</b></span>
 field, type or browse to select the directories from which you would like
 to add the resources.
 
@@ -97,22 +95,22 @@ the containers in the selected directory. Then in the right pane, select
 or clear boxes for individual files.</li>
 
 <li CLASS="Item">
-Click&nbsp;<span CLASS="Label"><b>Select Types</span></b> to select specific
+Click&nbsp;<span CLASS="Label"><b>Select Types</b></span> to select specific
 file types to add.</li>
 
 <li CLASS="Item">
-Click&nbsp;<span CLASS="Label"><b>Select All</span></b> to select all files
+Click&nbsp;<span CLASS="Label"><b>Select All</b></span> to select all files
 in the directory, then go through and deselect the ones that you don't
 want to add.</li>
 
 <li CLASS="Item">
-Click&nbsp;<span CLASS="Label"><b>Deselect All</span></b> to deselect all
+Click&nbsp;<span CLASS="Label"><b>Deselect All</b></span> to deselect all
 files in the directory, then go through and choose individual files to
 add.</li>
 </ul>
 
 <div CLASS="Para">In the<span CLASS="Label"> <b>Where Do You Want The Imported
-Resources To Go?</span></b> field, type or browse to select a workbench
+Resources To Go?</b></span> field, type or browse to select a workbench
 container for the added resources (if it was not already selected when
 you activated the&nbsp;<span CLASS="Label">Import</span> command).</div>
 
@@ -127,7 +125,7 @@ overwrite existing resources without warning</li>
 create a complete file structure for the imported files</li>
 </ul>
 
-<div CLASS="Para">Click&nbsp;<span CLASS="Label"><b>Finish</span></b> when
+<div CLASS="Para">Click&nbsp;<span CLASS="Label"><b>Finish</b></span> when
 you are done.</div>
 </ol>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
