--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-52.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-52.htm
@@ -8,8 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Between Different Workbench Windows</H1>
+<H1 CLASS="Head"> Between different Workbench windows</H1>
 <P CLASS="Para">
 You can use drag-and-drop to move resources between different workbench windows. Select a resource you want to move, and drag-and-drop it in the desired destination.</P>
 <DIV CLASS="Note">
