--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-56.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-56.htm
@@ -8,8 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Inherited Methods</H1>
+<H1 CLASS="Head"> Inherited methods</H1>
 <P CLASS="Para">
 You can add stubs for inherited abstract methods to a class via its context menu in the Outline view.</P>
 <P>&nbsp;<br>
