--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
@@ -10,8 +10,7 @@
 <body bgcolor="#FFFFFF" link="#0000FF" vlink="#0000FF" lang="EN-US">
 
 <div class=Section1>
-<h1>
-Showing an element in the Package Explorer</h1>
+  <h1> Showing an element in the Package Explorer view</h1>
 
 <div class="para">You can reveal an element's location in the Package Explorer
 view</div>
