--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
@@ -10,8 +10,7 @@
 <body bgcolor="#FFFFFF" link="#0000FF" vlink="#0000FF" lang="EN-US">
 
 <div class=Section1>
-<h1>
-Opening a type in the Package Explorer</h1>
+  <h1> Opening a type in the Package Explorer view</h1>
 
 <div class="para">You can open the Package Explorer on any type that is
 included on a project's class path.</div>
@@ -22,17 +21,17 @@ the menu bar, select <b>Navigate > Go To > Type.</b> The Go To Type dialog
 opens.
 
 <p class="para">2.<span style='font:7.0pt "Times New Roman"'></span>In
-the&nbsp;<span class=label><b>Choose a type</span></b> field, begin typing
+the&nbsp;<span class=label><b>Choose a type</b></span> field, begin typing
 an expression to narrow the list of available types, using wildcards as
 needed. As you type, the list is filtered to display only types that match
 the current expression.
 
 <p class="para">3.<span style='font:7.0pt "Times New Roman"'></span>In
-the&nbsp;<span class=label><b>Matching Types</span></b> list, select a
+the&nbsp;<span class=label><b>Matching Types</b></span> list, select a
 type. When there is more than one definition of a type, then select a package
-in the&nbsp;<span class=label><b>Qualifier</span></b> list.
+in the&nbsp;<span class=label><b>Qualifier</b></span> list.
 
-<p class="para">4.<span style='font:7.0pt "Times New Roman"'></span>Click&nbsp;<span class=label><b>OK</span></b>
+<p class="para">4.<span style='font:7.0pt "Times New Roman"'></span>Click&nbsp;<span class=label><b>OK</b></span>
 when you are done. The selected type is displayed in the Package Explorer.
 
 <p class="para"><b>Note:</b> Revealing may not be possible if Package Explorer
