--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-32.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-32.htm
@@ -5,8 +5,7 @@
 <link REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </HEAD>
 <body bgcolor="#FFFFFF">
-<h1 CLASS="Head">
-Creating JAR Files</h1>
+<h1 CLASS="Head"> Creating JAR files</h1>
 
 <div CLASS="Para">You can create and regenerate JAR files in the workbench.</div>
 
