--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
@@ -7,8 +7,7 @@
 
 <body bgcolor="#ffffff">
 
-<h1 class="Head">
-Using quick fix</h1>
+<h1 class="Head"> Using Quick Fix</h1>
 To use the QuickFix feature:
 <ul>
 <li>
@@ -34,11 +33,11 @@ when an entry is selected.</li>
 <li>
 Select an entry form the list and press <b>Enter</b>.</li>
 </ul>
-If you have the <b>Window &gt; Preference &gt; Java &gt; Editor &gt; Problem Indication
-&gt; Indicate problems solvable with QuickFix in vertical ruler </b>checkbox
-selected, then light bulb icons appear on the left-hand side vertical ruler
-to indicate QuickFix'able problems. You can then click on one of the the
-light bulb icons to invoke QuickFix.
+If you have the <b>Window &gt; Preference &gt; Java &gt; Editor &gt; Problem Indication 
+&gt; Indicate problems solvable with Quick Fix in vertical ruler </b>checkbox 
+selected, then light bulb icons appear on the left-hand side vertical ruler to 
+indicate Quick Fix'able problems. You can then click on one of the the light bulb 
+icons to invoke Quick Fix. 
 <p><b>Note:</b> Occassionally, invoking Quick Fix will not suggest any
 corrections. A message saying '<b>No suggestions available</b>' will be
 displayed in such cases.
