--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-206.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-206.htm
@@ -12,7 +12,8 @@
 <h1 CLASS="Head">
 Externalizing Strings</h1>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
-<p><a href="../concepts/concepts-7.htm">Java editor</a>
+<p><a href="../concepts/concepts-7.htm">Java editor</a> 
+<p><a href="../concepts/cnls.htm">String Externalization</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
 <br><a href="tasks-188.htm">Finding strings to externalize</a>
 <br><a href="tasks-202.htm">Finding unused and incorrectly used keys in
