--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
@@ -28,7 +28,7 @@ then all of the editor content is formatted.
 <p class="head">3.<span style='font:7.0pt "Times New Roman"'></span>Format
 the code by either
 <ul>
-	<li>Selecting Format from the editor's pop-up menu or</li>
+	<li>Selecting <b>Format</b> from the editor's pop-up menu or</li>
 	<li>Pressing <b>Ctrl+Shift+F</b> or</li>
 	<li>Selecting<b>Source > Format</b> from the menu bar.</li>
 </ul>
