Alt text for images

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -40,7 +40,7 @@ junit.textui.TestRunner.java</SPAN>
 In the Outline view, notice that the TestRunner class has a &quot;runnable&quot; icon.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-58.gif" alt="">
+<IMG SRC="../images/qs-58.gif" alt="Outline view with selected TestRunner class">
 </DIV>
 </DIV>
 </TD>
@@ -59,7 +59,7 @@ cascading <SPAN CLASS="Label">Run As</SPAN> menu. This will launch the class in 
 or the selected class in the Navigator, as a local Java application.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-59.gif" alt="">
+<IMG SRC="../images/qs-59.gif" alt="Run drop down menu">
 </DIV>
 </DIV>
 </TD>
@@ -75,7 +75,7 @@ or the selected class in the Navigator, as a local Java application.</P>
 Notice that the program has run and the following message appears in the Console view telling you that the program needs an execution argument.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-60.gif" alt="">
+<IMG SRC="../images/qs-60.gif" alt="Console with error message: Usage: TestRunner [-wait] testCaseName, where name is the name of the TestCase class">
 </DIV>
 </DIV>
 </TD>
@@ -92,7 +92,7 @@ Using the drop-down <SPAN CLASS="Label">
 Run</SPAN> menu in the toolbar, select <SPAN CLASS="Label">Run...</SPAN>.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-61.gif" alt="">
+<IMG SRC="../images/qs-61.gif" alt="Run menu of the toolbar">
 </DIV>
 </DIV>
 </TD>
@@ -110,7 +110,7 @@ using the Java Application shortcut, a launch configuration was automatically cr
 the selected class.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-62.gif" alt="">
+<IMG SRC="../images/qs-62.gif" alt="Launch configuration dialog showing the Main tab">
 </DIV>
 </DIV>
 </TD>
@@ -127,7 +127,7 @@ Select the Arguments tab and type <SPAN CLASS="Filename">
 junit.samples.VectorTest</SPAN> in the Program arguments area.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-63.gif" alt="">
+<IMG SRC="../images/qs-63.gif" alt="Arguments tab of the launch configuration dialog">
 </DIV>
 </DIV>
 </TD>
@@ -144,7 +144,7 @@ junit.samples.VectorTest</SPAN> in the Program arguments area.</P>
 Run</SPAN>. This time the program runs correctly, indicating the number of tests that were run.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-64.gif" alt="">
+<IMG SRC="../images/qs-64.gif" alt="Console showing program output">
 </DIV>
 </DIV>
 </TD>
@@ -160,7 +160,7 @@ Switch to the Debug perspective. In the Debug view, notice that a launch was reg
 program was run.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-65.gif" alt="">
+<IMG SRC="../images/qs-65.gif" alt="Debug view showing two terminated run launches">
 </DIV>
 </DIV>
 <DIV CLASS="Note">
@@ -185,7 +185,7 @@ Run</SPAN>
  be relaunched by selecting them in this history list as well.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-66.gif" alt="">
+<IMG SRC="../images/qs-66.gif" alt="Run drop down menu from the workbench toolbar">
 </DIV>
 </DIV> 
 </TD>
@@ -203,7 +203,7 @@ Remove All Terminated</SPAN>
  to clear the view of terminated launches.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-67.gif" alt="">
+<IMG SRC="../images/qs-67.gif" alt="Debug view showing context menu">
 </DIV>
 </DIV>
 </TD>
