--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
@@ -35,9 +35,11 @@ a project's pop-up menu or the <b>Project</b> menu in the menu bar.</li>
 <br><a href="tasks-109.htm">Building manually</a>
 <br><a href="tasks-111.htm">Viewing and editing a project's build path</a>
 <br><a href="tasks-110.htm">Working with build paths</a>
-<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
-<br><a href="../reference/ref-123.htm">Java Build Path</a>
-<br><a href="../reference/ref-menu-project.htm">Project menu</a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159> 
+  <br>
+  <a href="../reference/ref-123.htm">Java Build Path</a> <br>
+  <a href="../reference/ref-menu-project.htm">Project menu</a> <br>
+<a href="../reference/ref-preferences-compiler.htm">Compiler preferences</a>
 <p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a>
 </body>
 </html>
