--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
@@ -9,9 +9,14 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 CLASS="Head">
-Using the Java editor</h1>
-<img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<h1 CLASS="Head"> Using the Java editor</h1>
+<p><b>Note:</b> Keyboard shortcuts used in the section (Java editor-related tasks) 
+  are the default key binding set.<br>
+  You can change between the <b>Default</b> and the <b>Emacs</b> sets by using 
+  the <b>Window &gt; Preferences &gt; Workbench &gt; Editors &gt; Key</b> bindings 
+  combo box.</p>
+<p> <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159> 
+</p>
 <p><a href="../concepts/concepts-7.htm">Java editor</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
 <p><a href="tasks-57.htm">Generating accessors</a>
