Spelling and layout corrections

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-82.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-82.htm
@@ -39,9 +39,7 @@ class=label><b>Finish</b></span>.</p>
   <p class=head> 6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> If other kinds of problems were anticipated, you can click <span
 class=label><b>Finish</b></span> to acknowledge the problems. The refactoring 
-    is carried out, and the wizard closes. If you chose in the Refactoring Preferences 
-    page to be notified of any problems afterwards, then any detected problems 
-    are displayed at this time.</p>
+    is carried out, and the wizard closes.</p>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-9.htm">Refactoring support</a></p>
