--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-83.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-83.htm
@@ -42,9 +42,7 @@
     &nbsp;</p>
   <ol start=5 type=1>
     <li class=MsoNormal style='     '>Click <span class=label><b>Finish</b></span> 
-      to execute the refactoring and close the wizard. If you chose in the Refactoring 
-      Preferences page to be notified of any problems, then any detected problems 
-      are displayed at this time.</li>
+      to execute the refactoring and close the wizard.</li>
   </ol>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
