--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-88.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-88.htm
@@ -11,27 +11,28 @@
 
 <h1 CLASS="Head">
 Parameters page</h1>
-
+<p>
 <div CLASS="Figure"><img SRC="../images/tasks-27.gif" height=303 width=376>
+<p>
 <div CLASS="FigureTitle">Extract Method Parameters Page</div>
 </div>
 
 <ul CLASS="UnorderedList">
 <li CLASS="Item">
-In the&nbsp;<span CLASS="Label"><b>Method name</span></b> field, type a
+In the&nbsp;<span CLASS="Label"><b>Method name</b></span> field, type a
 name for the new method that will be extracted.</li>
 
 <li CLASS="Item">
-In the&nbsp;<span CLASS="Label"><b>Access Modifier</span></b> list, specify
+In the&nbsp;<span CLASS="Label"><b>Access Modifier</b></span> list, specify
 the method's visibility (public, default, protected, or private).</li>
 
 <li CLASS="Item">
 You can&nbsp;<span CLASS="Label"><b>Add thrown runtime exceptions to method
-signature</span></b> by selecting the corresponding checkbox.</li>
+signature</b></span> by selecting the corresponding checkbox.</li>
 
 <li CLASS="Item">
-Click&nbsp;<span CLASS="Label"><b>Next</span></b> to perform a quick refactoring,
-or click&nbsp;<span CLASS="Label"><b>Finish</span></b> to perform a controlled
+Click&nbsp;<span CLASS="Label"><b>Next</b></span> to perform a quick refactoring,
+or click&nbsp;<span CLASS="Label"><b>Finish</b></span> to perform a controlled
 refactoring.</li>
 </ul>
 
