--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-89.htm
@@ -13,21 +13,15 @@ Problems page</H1>
 <P CLASS="Para">
 The three top-most mistakes when extracting a method are:</P>
 <UL CLASS="UnorderedList">
-<LI CLASS="Item">
-The selection does not cover statements from a method body.</LI>
-<LI CLASS="Item">
-The selection does not cover whole statements, which is defined as:</LI>
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-everything between two semicolons (; ... ;), or </LI>
-<LI CLASS="Item">
-a whole block, totally contained within a set of curly braces ({ ... }).</LI>
+  <LI CLASS="Item"> The selection does not cover statements or an expression from 
+    a method body.</LI>
+  <LI CLASS="Item"> The selection does not cover a whole set of statement or an 
+    expression.</LI>
 </UL>
-<LI CLASS="Item">
-the selection doesn't mark the condition part of an if/then/else, do/while, or while statement. Besides normal statements these parts can be extracted too.</LI>
-</UL>
-<P CLASS="Para">
-On the problems pages, you can press F1 to link to a detailed description of errors. </P>
+<P CLASS="Para">You can use the <b>Edit &gt; Expand Selection to</b> actions to 
+  expand an selection to a valid expression or set of statements.</P>
+<P CLASS="Para">On the problems pages, you can press F1 to link to a detailed 
+  description of errors. </P>
 <P>&nbsp;<br>
 
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
