--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
@@ -15,10 +15,10 @@ Renaming a package</h1>
 <div CLASS="Para">To rename a package:</div>
 
 <ol>
-<div CLASS="Para">In the Package Explorer or Package Explorer, select the
-package that you want to rename.</div>
-
-<div CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Rename</span></b>.</div>
+  <div CLASS="Para">In the Package Explorer or the Packages view select the package 
+    that you want to rename.</div>
+  <div CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Refactor 
+    &gt; Rename</b></span>.</div>
 </ol>
 
 <div CLASS="Para">This updates all import statements of any affected compilation
