--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-92.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-92.htm
@@ -18,7 +18,8 @@ Renaming a compilation unit</h1>
 <div CLASS="Para">In the Package Explorer, select the compilation unit
 you want to rename.</div>
 
-<div CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Rename</span></b>.</div>
+  <div CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Refactor 
+    &gt; Rename</b></span>.</div>
 </ol>
 
 <div CLASS="Para">Renaming a compilation unit also renames (and updates
