--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-169.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-169.htm
@@ -15,42 +15,24 @@ You can rename a field by modifying its declaration in the compilation
 unit in which it is declared. However, if you also want to update all references
 to it, do one of the following:
 <ol>
-<li>
-In the Package Explorer, double-click the compilation unit where the field
-is declared, to open it in the editor.</li>
-
-<li>
-In the Outline view, select the field.</li>
-
-<li>
-From the field's pop-up menu, select <b>Refactor</b> > <b>Rename</b>.</li>
+  <li> In a Java view presenting fields (for example in the Outline view) select 
+    a field.</li>
+  <li> From the view's pop-up menu, select <b>Refactor</b> > <b>Rename</b> or 
+    select <b>Refactor &gt; Rename</b> from the global menu bar.</li>
 </ol>
-or
+or 
 <ol>
-<li>
-In a Java editor, select a reference to the field (or the field's declaration)</li>
-
-<li>
-From the editor's pop-up menu, select <b>Refactor > Rename</b></li>
+  <li> In a Java editor, select a reference to the field (or the field's declaration).</li>
+  <li> From the editor's pop-up menu, select <b>Refactor > Rename</b> or select 
+    <b>Refactor &gt; Rename</b> from the global menu bar.</li>
 </ol>
-or
-<ol>
-<li>
-In the Package Explorer, double-click the compilation unit where the field
-is declared, to open it in the editor.</li>
-
-<li>
-In the Outline view, select the field.</li>
-
-<li>
-From the menu bar, select <b>Refactor</b> > <b>Rename</b>.</li>
-</ol>
-
-<p><br><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
-<br><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
-<br><a href="../reference/ref-117.htm">Refactoring wizard</a>
-<br><a href="../reference/ref-23.htm">Refactoring preferences</a>
-<br><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
+<p><br>
+  <img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159> 
+  <br>
+  <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a> <br>
+  <a href="../reference/ref-117.htm">Refactoring wizard</a> <br>
+  <a href="../reference/ref-23.htm">Refactoring preferences</a> <br>
+  <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a> </p>
 <p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a>
 </body>
 </html>
