--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
@@ -24,18 +24,21 @@ or, from the view's pop-up menu, select <b>Refactor >&nbsp;<span class=label>Mov
 
 <p class="para">3.&nbsp; In the resulting dialog, select the new location
 for the element and press <b>OK</b>.
-<br><b>Note:</b> Moving static members (such methods and types), classes
-or compilation units allows you to choose to also update references to
-these elements.
-
-<p class="para">You can also move Java elements by dragging them and dropping
+<br>
+    <b>Note:</b> Moving static members (such as methods and types), classes or 
+    compilation units allows you to choose to also update references to these 
+    elements. 
+  <p class="para">You can also move Java elements by dragging them and dropping
 in the desired new location.
-<div class="para"><b>Note</b>: Dragging and dropping compilation units
-and types allows you to update references to these elements. In the dialog
-that show up on dropping, press <b>Yes</b> if you want to update references,
-press <b>Preview</b> if you want to see the preview of the reference updates,
-press <b>No</b> if you want to move the elements without updating references
-or press <b>Cancel</b> if you want to cancel the move operation.</div>
+<div class="para">
+    <p><b>Note</b>: Dragging and dropping compilation units and types allows you 
+      to update references to these elements. In the dialog that show up on dropping, 
+      press <b>Yes</b> if you want to update references, press <b>Preview</b> 
+      if you want to see the preview of the reference updates, press <b>No</b> 
+      if you want to move the elements without updating references or press <b>Cancel</b> 
+      if you want to cancel the move operation.</p>
+    <p>&nbsp;</p>
+  </div>
 
 <div class="para">To copy Java elements you need to copy them to clipboard
 and paste in the desired new location:</div>
@@ -44,33 +47,21 @@ and paste in the desired new location:</div>
 <p class="para">1.&nbsp; From a Java view, select the Java elements you
 want to copy to clipboard and do one of the following:
 
-<p class="para"><span style='font-family:Symbol'>&middot;&nbsp;</span>
-Press <b>Ctrl+C</b>
+<ul>
+	<li>Press <b>Ctrl+C</b></li>
+	<li>From the menu bar, select <b>Edit > Copy</b></li>
+	<li>From the view’s pop-up menu, select <b>Copy</b></li>
+</ul>	
 
-<p class="para"><span style='font-family:Symbol'>&middot;&nbsp;</span>
-From the menu bar, select <b>Edit > Copy</b>
-
-<p class="para"><span class=label><span 
-style='font-family:Symbol'>&middot;&nbsp;</span></span>
-From the view’s pop-up menu, select&nbsp;<span 
-class=label><b>Copy</b></span>
-
-<p class="para"><span class=label>2.&nbsp;</span><span 
-class=label>Now,
+<p class="para">2.&nbsp;Now,
 to paste the elements, select the desired destination and do one of the
-following:</span>
+following:
 
-<p class="para"><span class=label><span 
-style='font-family:Symbol;'>&middot;&nbsp;</span></span><span class=label>Press
-<b>Ctrl+V</b></span>
-
-<p class="para"><span style='font-family:Symbol'>&middot;&nbsp;</span>
-From the menu bar, select <b>Edit > Paste</b>
-
-<p class="para"><span class=label><span 
-style='font-family:Symbol'>&middot;&nbsp;</span></span>
-From the view's pop-up menu, select&nbsp;<span 
-class=label><b>Copy</b></span>
+<ul>
+	<li>Press<b>Ctrl+V</b></li>
+	<li>From the menu bar, select <b>Edit > Paste</b></li>
+	<li>From the view's pop-up menu, select<b>Copy</b></li>
+</ul>
 
 <p class="para">You can also copy Java elements by dragging them and dropping
 in the desired new location. You will need to have <b>Ctrl</b> pressed
