--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
@@ -13,42 +13,22 @@
 <h1 CLASS="Head">
 Renaming a class or an interface</h1>
 
-<div CLASS="Para">You can rename a class or an interface by modifying its
-declaration in the compilation unit in which it is declared. However, if
-you also want to update all references to it, do one of the following:</div>
-
+<div CLASS="Para">You can rename a class or an interface by modifying its declaration 
+  in the compilation unit in which it is declared. However, if you also want to 
+  update all references to it, do one of the following:</div>
 <ol>
-<li>
-In the Package Explorer, double-click the compilation unit where the class
-or interface is declared, to open it in the editor.</li>
-
-<li>
-In the Outline view, select the class or interface.</li>
-
-<li>
-From the class's or interface's pop-up menu, select <b>Refactor</b> > <b>Rename</b>.</li>
+  <li> In a Java view presenting classes and/or interfaces (e.g. the Outline view, 
+    the Type Hierarchy views, etc.) select a class or interface.</li>
+  <li> From the class's or interface's pop-up menu, select <b>Refactor</b> > <b>Rename</b> 
+    or use the <b>Refactor &gt; Rename</b> action from the global menu bar.</li>
 </ol>
-or
+or 
 <ol>
-<li>
-In a Java editor, select a reference to the class or interface</li>
-
-<li>
-From the editor's pop-up menu, select <b>Refactor > Rename</b></li>
+  <li> In a Java editor, select a reference to the class or interface.</li>
+  <li> From the editor's pop-up menu, select <b>Refactor > Rename</b> or use the <b>Refactor 
+    &gt; Rename</b> action from the global menu bar.</li>
 </ol>
-or
-<ol>
-<li>
-In the Package Explorer, double-click the compilation unit where the class
-or interface is declared, to open it in the editor.</li>
-
-<li>
-In the Outline view, select the class or interface.</li>
-
-<li>
-From the menu bar, select <b>Refactor</b> > <b>Rename</b>.</li>
-</ol>
-<img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
+<img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159> 
 <p><a href="../concepts/concepts-3.htm">Java projects</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="tasks-17.htm">Creating a new Java class</a>
