--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-96.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-96.htm
@@ -17,26 +17,21 @@ in the compilation unit in which it is declared. However, if you also want
 to update all references to it, you must either:</div>
 
 <ol>
-<li>
-In the Package Explorer, go to the compilation unit where the method is
-declared, and double-click it to open it in the editor.</li>
-
-<li>
-Select the method in the Outline view, from its pop-up menu, select <b>Refactor</b>
-> <b>Rename</b>.</li>
+  <li> In a Java view presenting methods (for example the Outline view) select 
+    the method to be renamed.</li>
+  <li> From the view's pop-up menu, select <b>Refactor</b> > <b>Rename</b> or 
+    select <b>Refactor &gt; Rename</b> from the global menu bar.</li>
 </ol>
 
 <div CLASS="Item">or</div>
 
 <ol>
-<li>
-In the Package Explorer, go to the compilation unit where the method is
-declared, and double-click it to open it in the editor.</li>
-
-<li>
-Select the method in the Outline view and select <b>Refactor > Rename</b>
-from the menu bar.</li>
+  <li> In a Java editor, select a reference to or the declaration of the method 
+    to be renamed.</li>
+  <li>From the editor's pop-up menu, select <b>Refactor</b> > <b>Rename</b> or 
+    select <b>Refactor &gt; Rename</b> from the global menu bar.</li>
 </ol>
+<div class="Item"></div>
 
 <div CLASS="Item"><b>Note 1:</b>&nbsp; Renaming a method declared in an
 interface also renames (and updates all references to) all methods that
