Alt text for images

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -46,7 +46,7 @@ fFull.addElement (new Integer(1));</SPAN>
  and double-click to set a breakpoint. </P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-68.gif" alt="Adding a Breakpoint">
+<IMG SRC="../images/qs-68.gif" alt="VectorTest.java editor showing added breakpoint">
 </DIV>
 </DIV>
 <DIV CLASS="Note">
@@ -82,7 +82,7 @@ VectorTest - junit.samples - /JUnit</SPAN>
 Finish</SPAN>.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-69.gif" alt="">
+<IMG SRC="../images/qs-69.gif" alt="Type selection dialog">
 </DIV>
 </DIV>
 </TD>
@@ -98,7 +98,7 @@ Finish</SPAN>.</P>
 As soon as the breakpoint is hit, the Debug perspective opens, and execution is suspended. Notice that the process is still active (not terminated) in the Debug view. Other threads might still be running.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-70.gif" alt="">
+<IMG SRC="../images/qs-70.gif" alt="Debug perspective">
 </DIV>
 </DIV>
 <DIV CLASS="Note">
@@ -119,7 +119,7 @@ In the editor in the Debug perspective, select the entire line where the breakpo
 Inspect</SPAN>.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-71.gif" alt="">
+<IMG SRC="../images/qs-71.gif" alt="VectorTest.java editor with selected breakpoint line showing context menu">
 </DIV>
 </DIV>
 </TD>
@@ -151,7 +151,7 @@ The Variables view displays the values of the variables in the selected stack fr
 Expand the fFull tree in the Variables view until you can see elementCount.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-72.gif" alt="">
+<IMG SRC="../images/qs-72.gif" alt="Variables view">
 </DIV>
 </DIV>
 </TD>
@@ -172,7 +172,7 @@ Step Over</SPAN>
 in the color specified in the Debug Variable Views "Changed Variable Value Color" preference (default color is red).
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-73.gif" alt="">
+<IMG SRC="../images/qs-73.gif" alt="TestCase.java editor showing current line of execution">
 </DIV>
 </DIV>
 </TD>
