--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
@@ -44,7 +44,7 @@ Select the text you just typed, and from its context menu, select <SPAN CLASS="L
 Display</SPAN> (or the equivalent item in the Display view toolbar or Run menu).</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-74.gif" alt="">
+<IMG SRC="../images/qs-74.gif" alt="Display view with fFull.size selected and showing context menu">
 </DIV>
 </DIV>
 </TD>
@@ -60,7 +60,7 @@ Display</SPAN> (or the equivalent item in the Display view toolbar or Run menu).
 The expression is evaluated.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-75.gif" alt="">
+<IMG SRC="../images/qs-75.gif" alt="Display view showing evaluation result: (int) 0">
 </DIV>
 </DIV>
 </TD>
@@ -102,7 +102,7 @@ Inspect</SPAN>
 The Expressions view opens with the value of the evaluated expression.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-76.gif" alt="">
+<IMG SRC="../images/qs-76.gif" alt="Expressions view containing fFull.toArray() expression">
 </DIV>
 </DIV>
 </TD>
